fixed email issue

--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -60,7 +60,7 @@
     <!-- Author Info -->
     <p>This journal was created by me using my own two hands.</p>
     <address>
-      Contact me at <a href="me@here.com"> me@here.com </a>, or at <a href="tel:555-123-4567">(555) 123-4567</a>.
+      Contact me at <a href="mailto:me@here.com"> me@here.com </a>, or at <a href="tel:555-123-4567">(555) 123-4567</a>.
     </address>
     <p>&copy; 2019 The Author.</p>
   </footer>
