--- a/problem-b/index.html
+++ b/problem-b/index.html
@@ -9,7 +9,59 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<h1>Top 5 Songs For Zareen</h1>
 
-
+<table>
+    <thead>
+        <tr>
+            <th scope="col">Rank</th>
+            <th scope="col">Artist</th>
+            <th scope="col">Title</th>
+            <th scope="col">Album</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>BE'O</td>
+            <td>Counting Stars</td>
+            <td>
+                <a href="https://open.spotify.com/track/2tXHQVu865MgrCeWeiu52h?si=bde2ed2f285d4eb4" alt="Album Cover" target="_blank"><img src="https://i.scdn.co/image/ab67616d0000b27310de29d48b95cbff9081d733" alt="Album"></a>
+            </td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>TWICE</td>
+            <td>Talk that Talk</td>
+            <td>
+                <a href="https://open.spotify.com/track/0RDqNCRBGrSegk16Avfzuq?si=43d409313d054db4" target="_blank"><img src="https://i.scdn.co/image/ab67616d0000b273c3040848e6ef0e132c5c8340" alt="Album"></a>
+            </td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>TXT</td>
+            <td>Anti-Romantic</td>
+            <td>
+                <a href="https://open.spotify.com/track/0v1cUEN3oF5URBDpc0wVtF?si=2e15dba5b1804368" target="_blank"><img src="https://i.scdn.co/image/ab67616d0000b2735137378ed49327e5dec7406f" alt="Album"></a>
+            </td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>DPR IAN</td>
+            <td>So Beautiful</td>
+            <td>
+                <a href="https://open.spotify.com/track/6syar8JKCt3R9ZBl11zmgI?si=6e9eccc784c8469e" target="_blank"><img src="https://i.scdn.co/image/ab67616d0000b273b7fd1b534c02e2426b63b345" alt="Album"></a>
+            </td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Gemini</td>
+            <td>Inside Out</td>
+            <td>
+                <a href="https://open.spotify.com/track/6NT8CJJ0H15tDhJnY3qgSb?si=aeb86a485bb445fe" target="_blank"><img src="https://i.scdn.co/image/ab67616d0000b2736d0c8fb619b2c14ebc8ca020" alt="Album"></a>
+            </td>
+        </tr>
+    </tbody>
+</table>
 </body>
 </html>
